# aspnet-api/src/Api/Contracts/Requests/Pedidos/CreatePedidoRequest.cs
@@ -7,6 +7,8 @@ public sealed record CreatePedidoRequest
 {
     public long ClienteId { get; init; }
 
+    public long CarrinhoId { get; init; }
+
     public EnderecoRequest EnderecoEntrega { get; init; } = new();
 
     public FormaPagamento FormaPagamento { get; init; }
