# aspnet-api/src/Api/Contracts/Responses/Pedidos/PedidoCanceladoResponse.cs
@@ -1,0 +1,14 @@
+using aspnet_api.Api.Contracts.Shared;
+
+namespace aspnet_api.Api.Contracts.Responses.Pedidos;
+
+public sealed record PedidoCanceladoResponse
+{
+    public long PedidoId { get; init; }
+
+    public long ClienteId { get; init; }
+
+    public DateTime DataPedido { get; init; }
+
+    public PedidoStatus Status { get; init; }
+}
