# aspnet-api/src/Api/Contracts/Responses/Pedidos/PedidoCriadoResponse.cs
@@ -1,17 +1,12 @@
-using aspnet_api.Api.Contracts.Responses.Shared;
 using aspnet_api.Api.Contracts.Shared;
 
 namespace aspnet_api.Api.Contracts.Responses.Pedidos;
 
-public sealed record PedidoResponse
+public sealed record PedidoCriadoResponse
 {
     public long PedidoId { get; init; }
 
-    public long CarrinhoId { get; init; }
-
     public long ClienteId { get; init; }
-
-    public EnderecoResponse EnderecoEntrega { get; init; } = new();
 
     public DateTime DataPedido { get; init; }
 
@@ -19,5 +14,5 @@ public sealed record PedidoResponse
 
     public PedidoStatus Status { get; init; }
 
-    public IReadOnlyCollection<PedidoItemResponse> Items { get; init; } = [];
+    public decimal ValorTotal { get; init; }
 }
